# lilcom

./: .gitignore  CMakeLists.txt  INSTALL  LICENSE  MANIFEST.in  Makefile  README.md  lilcom.c  lilcom.h  lilcom.py  lilcommodule.c  sample.txt  setup.py  test.py
.github/workflows/: build-wheels-aarch64.yaml  build-wheels-macos.yaml  build-wheels-win32.yaml  build-wheels-win64.yaml  build-wheels.yaml  build_conda_macos.yml  build_conda_ubuntu.yml  build_conda_windows.yml  nightly-test.yaml  publish_to_pypi.yml  test-pip-install.yaml  test-ubuntu-macos.yaml  test-windows.yaml
cmake/: cmake_extension.py  pybind11.cmake
example/: README.md  setup.py  spammodule.c  test.py
lilcom/: CMakeLists.txt  Makefile  __init__.py  bit_packer.c  bit_packer.h  bit_stream.h  bit_stream_test.cc  compression.cc  compression.h  compression_test.cc  encoder.c  encoder.h  fixed_math.c  fixed_math.h  int_math.c  int_math.h  int_math_utils.h  int_math_utils_test.cc  int_scalar.h  int_scalar_test.cc  int_stream.h  int_stream_test.cc  int_vec.h  int_vec_test.cc  lilcom.c  lilcom.cc  lilcom.h  lilcom.py  lilcom_c_extension.c  lilcom_common.h  lilcom_extension.cc  lilcom_interface.py  lilcommodule.c  lpc_math.cc  lpc_math.h  lpc_math_test.cc  lpc_stream.h  lpc_stream_test.cc  prediction_math.c  prediction_math.cc  (+3 more)
scripts/: build_conda.sh
scripts/conda/lilcom/: meta.yaml
test/: CMakeLists.txt  linear_prediction.py  linear_prediction_new.py  reconstruction-test.py  routine1-one-dimensional-integer.py  routine2-one-dimensional-float.py  run_comparison.sh  test_header.py  test_interface.py  test_lilcom.py  test_reconstruction.py  test_reconstruction2.py  test_speed.py
test/procedures/: routine1-one-dimensional-integer.py
test/real-audio/: audioTest.py  cropper.py
test/results/: reconstruction-test.py
test/results/Reports/: Piano-Scenario.csv  john_oliver-Scenario.csv  les_miserables-Scenario.csv  simons_institute-Scenario.csv
